# BAFNet-plus

./: .gitignore  ABLATION_PLAN.md  BAFNET_ALPHA_FUSION_NOTE.md  CLAUDE.md  Makefile  README.md  criteria.py  data.py  dd.py  enhance.py  enhance.sh  eval.sh  evaluate.py  evaluate.sh  export_onnx.py  generate_debug_samples.py  inference.py  parse_eval_results.py  plan.md  pyproject.toml  requirements.txt  run2.sh  run_eval.sh  setup.py  solver.py  stft.py  test.py  test_streaming.py  train.py  utils.py
android/: .gitignore  README.md  build.gradle.kts  connect_adb.md  gradle.properties  settings.gradle.kts
conf/: config.yaml  config_bafnet.yaml  config_bafnetplus.yaml  config_dccrn.yaml  config_dccrn_plus.yaml  config_exp.yaml  config_mapping.yaml  config_seconformer_am.yaml  config_seconformer_tm.yaml  config_tamenet.yaml
docs/: MAMBA_DIAGNOSTIC_REPORT.md  MAMBA_SOLUTION_REPORT.md  PLAN.md  android_serving_frameworks.md  onnx_runtime_qnn_ep_reference.md  primeknet_lookahead.md
models/: bafnet.py  bafnetplus.py  conmer.py  dccrn.py  dccrn_plus copy 2.py  dccrn_plus copy.py  dccrn_plus.py  disc_cmgan.py  disc_hifigan.py  discriminator.py  mapping.py  mapping_ver2.py  masking.py  module_dccrn.py  mpnet.py  primeKnet.py  primeknet.py  primeknet_full_stream.py  primeknet_gru.py  primeknet_lk.py  primeknet_lstm.py  primeknet_lstm_asym.py  primeknet_mamba.py  primeknet_wotime.py  primeknetv2.py  seconformer.py  seconformer_orig.py  stft.py  streamer.py  tamenet.py  tscnet.py
scripts/: analyze_dataset_length.py  build_qat_split_sidecar.py  build_vibravox_16k_subsets.py  (+27 more)
(+190 files in other folders)
